# learning-cmake

./: .gitignore  CMakeLists.txt  README.md
boost/: CMakeLists.txt  main.cpp
config-file/: CMakeLists.txt  README.md  build.sh
config-file/cmake/: build.cmake  build.h.in  config.cmake  config.h.in
curl/: CMakeLists.txt
curl/src/: CMakeLists.txt  main.c
hello-module/: CMakeLists.txt
hello-module/cmake/: FindHELLO.cmake  find-hello.cmake
hello-module/src/: CMakeLists.txt  main.c
hello-world/: CMakeLists.txt
hello-world-clear/: CMakeLists.txt  README.md
hello-world-clear/src/: CMakeLists.txt  main.c
hello-world-lib/: CMakeLists.txt  README.md
hello-world-lib/src/: CMakeLists.txt  hello.c  hello.h
hello-world-shared/: CMakeLists.txt
hello-world-shared/src/: CMakeLists.txt  main.c
hunter-simple/: CMakeLists.txt  README.md  main.cc  module.cc  module.h  module_test.cc
hunter-simple/cmake/: HunterGate.cmake
